add refresh and refactor code